# fastapi-shop

./: .pre-commit-config.yaml  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_01_08_1020-c1d7e277ca55_creata_operation.py  2024_01_08_1247-a6aaed2a5246_creata_user.py  2024_01_08_2013-ce73afad42d3_creata_pos2t.py  2024_01_08_2058-36fd45107c37_creata_profile.py  2024_01_13_1249-fb1eb290d219_create_order_and_order_produt_associat.py
src/: main.py
src/api_v1/products/: crud.py  dependencies.py  views.py
src/core/: config.py
src/core/models/: base.py  db_helper.py  mixins.py  order.py  post.py  product.py  profile.py  user.py
src/users/: crud.py
