[tool.poetry]
name = "fastapi-shop"
version = "0.1.0"
description = ""
authors = ["nikolay <Nikc-mk@mail.ru>"]
readme = "README.md"
packages = [{include = ""}]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.6.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
fastapi = {extras = ["all"], version = "^0.108.0"}
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
